Changed technology.html to fix image switching

--- a/technology.html
+++ b/technology.html
@@ -66,7 +66,7 @@
       <button aria-selected="false" aria-controls="spaceport" data-image="spaceport-img" class="ff-serif fs-500"
         role="tab"><span class="sr-only">Slide
           number</span>2</button>
-      <button aria-selected="false" aria-controls="space-capsule" data-image="spaceport-img" class="ff-serif fs-500"
+      <button aria-selected="false" aria-controls="space-capsule" data-image="space-capsule-img" class="ff-serif fs-500"
         role="tab"><span class="sr-only">Slide
           number</span>3</button>
     </div>
